Added a bunch of info

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
+  <app-banner></app-banner>
+  <app-intro></app-intro>
+  <app-members></app-members>
 <app-footer></app-footer>
