--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,13 +1,37 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/images/slam3.jpg" class="d-block w-100" alt="...">
+      <video src="assets/videos/cleaning_robot.mp4" class="d-block w-100" alt="..." autoplay loop muted>
+        Tu navegador no admite el elemento <code>video</code>.
+      </video>
+      <div class="carousel-caption d-none d-md-block">
+        <h1>UNSLAM</h1>
+        <p>Ofrecemos servicios de navegación inteligentes</p>
+      </div>
     </div>
     <div class="carousel-item">
-      <img src="assets/images/slam2.png" class="d-block w-100" alt="...">
+      <video src="assets/videos/keypoints.mp4" class="d-block w-100" alt="..." autoplay loop muted>
+        Tu navegador no admite el elemento <code>video</code>.
+      </video>
+      <div class="carousel-caption d-none d-md-block">
+        <p>Generación de mapas, localización y navegación.</p>
+      </div>
     </div>
     <div class="carousel-item">
-      <img src="assets/images/slam1.jpg" class="d-block w-100" alt="...">
+      <video src="assets/videos/warehouse.mp4" class="d-block w-100" alt="..." autoplay loop muted>
+        Tu navegador no admite el elemento <code>video</code>.
+      </video>
+      <div class="carousel-caption d-none d-md-block">
+        <p>Aplicación en diversos dispositivos y robots.</p>
+      </div>
     </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only"></span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only"></span>
+  </a>
 </div>
