--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -1,3 +1,24 @@
 section {
   background-color: black;
 }
+
+.carousel-caption {
+  background-color: black;
+  border-radius: 10px;
+  opacity: 0.8;
+  padding: 10px;
+}
+
+h1 {
+  font-size: 72px;
+}
+
+p {
+  font-size: 48px;
+}
+
+@media (min-width: 1280px) {
+  video {
+    margin-bottom: -320px;
+  }
+}
