Changed font styles

--- a/src/app/intro/intro.component.css
+++ b/src/app/intro/intro.component.css
@@ -2,12 +2,7 @@ section {
   font-family: Sarabun;
   padding: 30px 0px;
   background-color: #ff4c4c;
-  color: #fff;
-}
-
-h1 {
-  font-weight: 600;
-  padding-bottom: 20px;
+  color: #2F2F2F;
 }
 
 p {
