--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,11 +1,8 @@
-<section id="nosotros" class="text-center">
+<section id="nosotros">
   <div class="container">
     <h1>NOSOTROS</h1>
     <div class="row">
-      <div class="col">
-        <img src="assets/images/Navigation-amico.png" style="width:100%; height:auto"/>
-      </div>
-      <div class="col">
+      <div class="col-8">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Donec ultrices eleifend justo, nec pharetra massa lobortis sed.
           Curabitur convallis, mauris ut eleifend tristique, nulla erat elementum
@@ -19,6 +16,9 @@
           et posuere dui convallis. In pulvinar malesuada mauris,
           a vulputate orci rutrum eget. Phasellus et odio est.
         </p>
+      </div>
+			<div class="col-4">
+        <img src="assets/images/Navigation-amico.png" style="width:100%; height:auto"/>
       </div>
     </div>
   </div>
