--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,4 +1,4 @@
-<section id="equipo" class="text-center">
+<section id="equipo">
   <div class="container">
     <h1>EL EQUIPO</h1>
     <div class="container">
