--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,40 +1,44 @@
 <section id="equipo">
   <div class="container">
     <h1>EL EQUIPO</h1>
-    <div class="container">
-      <div class="row text-center">
-        <div class="col">
+    <div class="container text-center">
+      <div class="row justify-content-center">
+        <div class="col col-sm-12 col-md-4 col-lg-2">
           <img src="assets/images/generic-profile-picture.jpg"  />
           <p class="name">Andres Bustamante</p>
           <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Donec ultrices eleifend justo, nec pharetra massa lobortis sed.</p>
         </div>
-        <div class="col">
+        <div class="col col-sm-12 col-md-4 col-lg-2">
           <img src="assets/images/generic-profile-picture.jpg"  />
           <p class="name">Matías De Stefano</p>
           <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Donec ultrices eleifend justo, nec pharetra massa lobortis sed.</p>
         </div>
-        <div class="col">
+        <div class="col col-sm-12 col-md-4 col-lg-2">
           <img src="assets/images/generic-profile-picture.jpg"  />
-            <p class="name">Agustín Pernas</p>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              Donec ultrices eleifend justo, nec pharetra massa lobortis sed.</p>
-          </div>
-        <div class="col">
+          <p class="name">Agustín Pernas</p>
+          <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Donec ultrices eleifend justo, nec pharetra massa lobortis sed.</p>
+        </div>
+        <div class="col col-sm-12 col-md-4 col-lg-2">
           <img src="assets/images/generic-profile-picture.jpg"  />
           <p class="name">Leandro Santos</p>
           <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Donec ultrices eleifend justo, nec pharetra massa lobortis sed.</p>
         </div>
-        <div class="col">
+        <div class="col col-sm-12 col-md-4 col-lg-2">
           <img src="assets/images/generic-profile-picture.jpg"  /> <br/>
           <p class="name">Alesio Sinopoli</p>
           <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Donec ultrices eleifend justo, nec pharetra massa lobortis sed.</p>
         </div>
       </div>
-      <img src="assets/images/Business risk-pana.png" style="width:40%; height:auto"/>
     </div>
   </div>
+
+
+  <img src="assets/images/Business risk-pana.png" style="width:40%; height:auto"/>
 </section>
+
+
