Adds new images for the 'Nosotros' section

--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -2,9 +2,32 @@
   <div class="container">
     <h1>NOSOTROS</h1>
     <div class="row">
-      <div class="col-8">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Donec ultrices eleifend justo, nec pharetra massa lobortis sed.
+      <div class="col-8 col-xs-12 col-sm-12 col-md-8 col-lg-8">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Donec ultrices eleifend justo, nec pharetra massa <b>generación de mapas.</b> 
+          Curabitur convallis, mauris ut eleifend tristique, nulla erat elementum est, nec congue augue purus non purus. 
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In hac habitasse platea dictumst. 
+          Vivamus non risus dictum, scelerisque massa ut, accumsan ipsum. 
+          In egestas turpis non velit porta dictum eget id mauris. 
+          Phasellus elit sapien, viverra ac lorem pretium, interdum varius ante. 
+          Quisque vel ullamcorper sapien. Nullam gravida leo at enim tincidunt maximus. 
+          Aliquam congue porta porta. Integer facilisis nisl et velit sagittis, et posuere dui convallis. 
+          In pulvinar malesuada mauris, a vulputate orci rutrum eget. Phasellus et odio est.
+        </p>
+      </div>
+			<div class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+        <img src="assets/images/Camera-pana.png" style="width:100%; height:auto"/>
+      </div>
+    </div>
+    <div class="row pt-5">
+      <div class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4 order-sm-2 order-xs-2 order-md-2 order-lg-first order-xl-first">
+        <img src="assets/images/Paper map-bro.png" style="width:100%; height:auto"/>
+      </div>
+      <div class="col-8 col-xs-12 col-sm-12 col-md-8 col-lg-8">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Donec ultrices eleifend justo, nec pharetra massa <b>localización.</b>
           Curabitur convallis, mauris ut eleifend tristique, nulla erat elementum
           est, nec congue augue purus non purus. Lorem ipsum dolor sit amet,
           consectetur adipiscing elit. In hac habitasse platea dictumst.
@@ -17,7 +40,24 @@
           a vulputate orci rutrum eget. Phasellus et odio est.
         </p>
       </div>
-			<div class="col-4">
+    </div>
+    <div class="row pt-5">
+      <div class="col-8 col-xs-12 col-sm-12 col-md-8 col-lg-8">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Donec ultrices eleifend justo, nec pharetra massa <b>navegación.</b>
+          Curabitur convallis, mauris ut eleifend tristique, nulla erat elementum
+          est, nec congue augue purus non purus. Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit. In hac habitasse platea dictumst.
+          Vivamus non risus dictum, scelerisque massa ut, accumsan ipsum.
+          In egestas turpis non velit porta dictum eget id mauris.
+          Phasellus elit sapien, viverra ac lorem pretium, interdum varius ante.
+          Quisque vel ullamcorper sapien. Nullam gravida leo at enim tincidunt maximus.
+          Aliquam congue porta porta. Integer facilisis nisl et velit sagittis, 
+          et posuere dui convallis. In pulvinar malesuada mauris,
+          a vulputate orci rutrum eget. Phasellus et odio est.
+        </p>
+      </div>
+			<div class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4">
         <img src="assets/images/Navigation-amico.png" style="width:100%; height:auto"/>
       </div>
     </div>
