--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,8 +10,8 @@
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="#nosotros">NOSOTROS</a>
         <a class="nav-link" href="#equipo">EL EQUIPO</a>
-        <a class="nav-link" href="#">Pricing</a>
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link" href="#">CONTACTO</a>
+        <a class="nav-link" href="#">REPOSITORIOS</a>
       </div>
     </div>
   </div>
