Adds two new sections

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
   <app-banner></app-banner>
   <app-intro></app-intro>
   <app-members></app-members>
+	<app-contact></app-contact>
+	<app-repos></app-repos>
 <app-footer></app-footer>
