--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -9,25 +9,24 @@
       <video src="assets/videos/cleaning_robot.mp4" class="d-block w-100" alt="..." autoplay loop muted>
         Tu navegador no admite el elemento <code>video</code>.
       </video>
-      <div class="carousel-caption d-none d-md-block">
-        <h1>UNSLAM</h1>
-        <p>Ofrecemos servicios de navegación inteligentes</p>
+      <div class="carousel-caption d-block">
+        <h1>Ofrecemos servicios de navegación inteligentes</h1>
       </div>
     </div>
     <div class="carousel-item">
       <video src="assets/videos/keypoints.mp4" class="d-block w-100" alt="..." autoplay loop muted>
         Tu navegador no admite el elemento <code>video</code>.
       </video>
-      <div class="carousel-caption d-none d-md-block">
-        <p>Generación de mapas, localización y navegación.</p>
+      <div class="carousel-caption d-block">
+        <h1>Generación de mapas, localización y navegación.</h1>
       </div>
     </div>
     <div class="carousel-item">
       <video src="assets/videos/warehouse.mp4" class="d-block w-100" alt="..." autoplay loop muted>
         Tu navegador no admite el elemento <code>video</code>.
       </video>
-      <div class="carousel-caption d-none d-md-block">
-        <p>Aplicación en diversos dispositivos y robots.</p>
+      <div class="carousel-caption d-block">
+        <h1>Aplicación en diversos dispositivos y robots.</h1>
       </div>
     </div>
   </div>
