--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -3,17 +3,13 @@
     <h1>NOSOTROS</h1>
     <div class="row">
       <div class="col-8 col-xs-12 col-sm-12 col-md-8 col-lg-8">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Donec ultrices eleifend justo, nec pharetra massa <b>generación de mapas.</b> 
-          Curabitur convallis, mauris ut eleifend tristique, nulla erat elementum est, nec congue augue purus non purus. 
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In hac habitasse platea dictumst. 
-          Vivamus non risus dictum, scelerisque massa ut, accumsan ipsum. 
-          In egestas turpis non velit porta dictum eget id mauris. 
-          Phasellus elit sapien, viverra ac lorem pretium, interdum varius ante. 
-          Quisque vel ullamcorper sapien. Nullam gravida leo at enim tincidunt maximus. 
-          Aliquam congue porta porta. Integer facilisis nisl et velit sagittis, et posuere dui convallis. 
-          In pulvinar malesuada mauris, a vulputate orci rutrum eget. Phasellus et odio est.
+        <p class="fs-2">
+          En <b>UNSLAM</b> ofrecemos productos que utilizan la técnica de
+					posicionamiento conocida como <b>Visual SLAM</b>, utilizando cámaras
+					para captar información del ambiente. Estas técnicas, por lo general,
+					requieren un alto poder de cómputo. Nuestros productos permiten
+					ejecutar Visual SLAM utilizando un <b>celular</b> como capturador
+					de imágenes.
         </p>
       </div>
 			<div class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4">
@@ -25,36 +21,26 @@
         <img src="assets/images/Paper map-bro.png" style="width:100%; height:auto"/>
       </div>
       <div class="col-8 col-xs-12 col-sm-12 col-md-8 col-lg-8">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Donec ultrices eleifend justo, nec pharetra massa <b>localización.</b>
-          Curabitur convallis, mauris ut eleifend tristique, nulla erat elementum
-          est, nec congue augue purus non purus. Lorem ipsum dolor sit amet,
-          consectetur adipiscing elit. In hac habitasse platea dictumst.
-          Vivamus non risus dictum, scelerisque massa ut, accumsan ipsum.
-          In egestas turpis non velit porta dictum eget id mauris.
-          Phasellus elit sapien, viverra ac lorem pretium, interdum varius ante.
-          Quisque vel ullamcorper sapien. Nullam gravida leo at enim tincidunt maximus.
-          Aliquam congue porta porta. Integer facilisis nisl et velit sagittis, 
-          et posuere dui convallis. In pulvinar malesuada mauris,
-          a vulputate orci rutrum eget. Phasellus et odio est.
+        <p class="fs-2">
+          Nuestros productos ofrecen 3 funciones principales. La primera de
+					ellas es la <b>generación de mapas</b> de los ambientes. Mediante el
+					celular enviaremos el video al sistema para procesarlo y generar el
+					mapa del ambiente. La segunda función es la <b>localización</b>, donde
+					podremos ver la ubicación del dispositivo, dentro del mapa, gracias a
+					las imágenes que envía el celular. La función de <b>navegación</b>
+					permite seleccionar un punto del mapa generado para permitir la
+					movilidad autónoma del dispositivo mediante la filmación de su
+					entorno.
         </p>
       </div>
     </div>
     <div class="row pt-5">
       <div class="col-8 col-xs-12 col-sm-12 col-md-8 col-lg-8">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Donec ultrices eleifend justo, nec pharetra massa <b>navegación.</b>
-          Curabitur convallis, mauris ut eleifend tristique, nulla erat elementum
-          est, nec congue augue purus non purus. Lorem ipsum dolor sit amet,
-          consectetur adipiscing elit. In hac habitasse platea dictumst.
-          Vivamus non risus dictum, scelerisque massa ut, accumsan ipsum.
-          In egestas turpis non velit porta dictum eget id mauris.
-          Phasellus elit sapien, viverra ac lorem pretium, interdum varius ante.
-          Quisque vel ullamcorper sapien. Nullam gravida leo at enim tincidunt maximus.
-          Aliquam congue porta porta. Integer facilisis nisl et velit sagittis, 
-          et posuere dui convallis. In pulvinar malesuada mauris,
-          a vulputate orci rutrum eget. Phasellus et odio est.
+        <p class="fs-2">
+					Nuestro software se aplica principalmente en <b>robots móviles
+					autónomos (AMR)</b>, aportando valor a ambientes como fábricas, depósitos
+					y hospitales, donde dichos robots podrán transportar objetos de manera
+					autónoma.
         </p>
       </div>
 			<div class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4">
