--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,11 +7,10 @@
     </a>
 
     <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+      <li class="nav-item"><a href="#nosotros" class="nav-link px-2 text-muted">NOSOTROS</a></li>
+      <li class="nav-item"><a href="#equipo" class="nav-link px-2 text-muted">EL EQUIPO</a></li>
+      <li class="nav-item"><a href="#contacto" class="nav-link px-2 text-muted">CONTACTO</a></li>
+      <li class="nav-item"><a href="#repositorios" class="nav-link px-2 text-muted">REPOSITORIOS</a></li>
     </ul>
   </footer>
 </div>
