--- a/src/app/members/members.component.css
+++ b/src/app/members/members.component.css
@@ -30,10 +30,12 @@ p {
   font-size: 24px;
 }
 
-.col img {
+img.member{
     border-radius: 100%;
     width: 80%;
     height: auto;
+		-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  	filter: grayscale(100%);
 }
 
 @media (min-width: 992px) {
