Adds animations to the images

--- a/src/app/repos/repos.component.html
+++ b/src/app/repos/repos.component.html
@@ -9,11 +9,11 @@
 				Aliquam id nisi augue. Aliquam urna velit, sodales et mollis eget, mollis sed dolor.
 				Duis pharetra ante vitae accumsan accumsan.
 				</p>
-				<a href="https://github.com/UNSLAM">
+				<a href="https://github.com/UNSLAM" target="_blank">
 					<button type="button" class="btn btn-primary mt-5">Enlace a GitHub</button>
 				</a>
 			</div>
-			<div class="col-4 col-xs-12 col-sm-12 col-md-6 col-lg-3">
+			<div data-aos="fade-right" data-aos-duration="3000" data-aos-anchor-placement="center-bottom" data-aos-offset="700" class="col-4 col-xs-12 col-sm-12 col-md-6 col-lg-3">
 				<img src="assets/images/Memory storage-pana.png" style="width: 100%"/>
 			</div>
 		</div>
