--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -12,12 +12,12 @@
 					de imágenes.
         </p>
       </div>
-			<div class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+			<div data-aos="fade-right" data-aos-duration="1000" data-aos-offset="400" class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4">
         <img src="assets/images/Camera-pana.png" style="width:100%; height:auto"/>
       </div>
     </div>
     <div class="row pt-5">
-      <div class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4 order-sm-2 order-xs-2 order-md-2 order-lg-first order-xl-first">
+      <div data-aos="fade-left" data-aos-duration="1000" data-aos-offset="500" class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4 order-sm-2 order-xs-2 order-md-2 order-lg-first order-xl-first">
         <img src="assets/images/Paper map-bro.png" style="width:100%; height:auto"/>
       </div>
       <div class="col-8 col-xs-12 col-sm-12 col-md-8 col-lg-8">
@@ -43,7 +43,7 @@
 					autónoma.
         </p>
       </div>
-			<div class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+			<div data-aos="fade-right" data-aos-duration="1000" data-aos-offset="600" class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4">
         <img src="assets/images/Navigation-amico.png" style="width:100%; height:auto"/>
       </div>
     </div>
