--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -2,13 +2,13 @@
   <div class="container">
     <h1>EL EQUIPO</h1>
     <div class="container text-center">
-      <div class="row justify-content-center">
+      <div data-aos="flip-down" data-aos-duration="1000" data-aos-offset="400" class="row justify-content-center">
         <div class="col col-sm-6 col-md-4 col-lg-2 col-xl-2">
           <img class="member" src="assets/images/generic-profile-picture.jpg"  />
           <p class="name">Andres Bustamante</p>
         </div>
         <div class="col col-xs-12 col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <img class="member" src="assets/images/Photo_cv.jpg"  />
+          <img class="member" src="assets/images/members/mdestefano.jpg"  />
           <p class="name">Matías De Stefano</p>
         </div>
         <div class="col col-sm-6 col-md-4 col-lg-2 col-xl-2">
@@ -16,7 +16,7 @@
           <p class="name">Agustín Pernas</p>
         </div>
         <div class="col col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <img class="member" src="assets/images/generic-profile-picture.jpg"  />
+          <img class="member" src="assets/images/members/lsantos.jpg"  />
           <p class="name">Leandro Santos</p>
         </div>
         <div class="col col-sm-6 col-md-4 col-lg-2 col-xl-2">
@@ -25,7 +25,7 @@
         </div>
       </div>
     </div>
-		<div class="row text-center justify-content-center">
+		<div data-aos="zoom-in-up" data-aos-duration="1500" data-aos-offset="800" class="row text-center justify-content-center">
 			<img src="assets/images/Business risk-pana.png" style="width:40%; height:auto"/>
 		</div>
   </div>
