--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -3,30 +3,30 @@
     <h1>EL EQUIPO</h1>
     <div class="container text-center">
       <div data-aos="flip-down" data-aos-duration="1000" data-aos-offset="400" class="row justify-content-center">
-        <div class="col col-sm-6 col-md-4 col-lg-2 col-xl-2">
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
           <img class="member" src="assets/images/generic-profile-picture.jpg"  />
           <p class="name">Andres Bustamante</p>
         </div>
-        <div class="col col-xs-12 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
           <img class="member" src="assets/images/members/mdestefano.jpg"  />
           <p class="name">Matías De Stefano</p>
         </div>
-        <div class="col col-sm-6 col-md-4 col-lg-2 col-xl-2">
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
           <img class="member" src="assets/images/generic-profile-picture.jpg"/>
           <p class="name">Agustín Pernas</p>
         </div>
-        <div class="col col-sm-6 col-md-4 col-lg-2 col-xl-2">
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
           <img class="member" src="assets/images/members/lsantos.jpg"  />
           <p class="name">Leandro Santos</p>
         </div>
-        <div class="col col-sm-6 col-md-4 col-lg-2 col-xl-2">
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
           <img class="member" src="assets/images/generic-profile-picture.jpg"  /> <br/>
           <p class="name">Alesio Sinopoli</p>
         </div>
       </div>
     </div>
 		<div data-aos="zoom-in-up" data-aos-duration="1500" data-aos-offset="400" class="row text-center justify-content-center">
-			<img src="assets/images/Business risk-pana.png" style="width:40%; height:auto"/>
+			<img src="assets/images/Business risk-pana.png" class="business"/>
 		</div>
   </div>
 	
