--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -12,6 +12,15 @@ section {
   transform: translateY(-50%);
 }
 
+@media (max-width: 768px) {
+	.carousel-caption {
+		background-color: black;
+		border-radius: 30px;
+		opacity: 0.5;
+		height: 160px;
+	}
+}
+
 .carousel-caption h1{
   opacity: 1;
 }
