--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h1>NOSOTROS</h1>
     <div class="row">
-      <div class="col-8 col-xs-12 col-sm-12 col-md-8 col-lg-8">
+      <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
         <p class="fs-2">
           En <b>UNSLAM</b> ofrecemos productos que utilizan la técnica de
 					posicionamiento conocida como <b>Visual SLAM</b>, utilizando cámaras
@@ -12,15 +12,15 @@
 					de imágenes.
         </p>
       </div>
-			<div data-aos="fade-right" data-aos-duration="1000" data-aos-offset="400" class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+			<div data-aos="fade-right" data-aos-duration="1000" data-aos-offset="400" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
         <img src="assets/images/Camera-pana.png" style="width:100%; height:auto"/>
       </div>
     </div>
     <div class="row pt-5">
-      <div data-aos="fade-left" data-aos-duration="1000" data-aos-offset="500" class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4 order-sm-2 order-xs-2 order-md-2 order-lg-first order-xl-first">
+      <div data-aos="fade-left" data-aos-duration="1000" data-aos-offset="500" class="col-xs-12 col-sm-12 col-md-4 col-lg-4 order-sm-1 order-xs-1 order-md-last order-lg-0 order-xl-0">
         <img src="assets/images/Paper map-bro.png" style="width:100%; height:auto"/>
       </div>
-      <div class="col-8 col-xs-12 col-sm-12 col-md-8 col-lg-8">
+      <div class="order-sm-0 order-xs-0 order-lg-1 order-xl-1 order-md-1 col-xs-12 col-sm-12 col-md-8 col-lg-8 ">
         <p class="fs-2">
           Nuestros productos ofrecen 3 funciones principales. La primera de
 					ellas es la <b>generación de mapas</b> de los ambientes. Mediante el
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div class="row pt-5">
-      <div class="col-8 col-xs-12 col-sm-12 col-md-8 col-lg-8">
+      <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
         <p class="fs-2">
 					Nuestro software se aplica principalmente en <b>robots móviles
 					autónomos (AMR)</b>, aportando valor a ambientes como fábricas, depósitos
@@ -43,7 +43,7 @@
 					autónoma.
         </p>
       </div>
-			<div data-aos="fade-right" data-aos-duration="1000" data-aos-offset="600" class="col-4 col-xs-12 col-sm-12 col-md-4 col-lg-4">
+			<div data-aos="fade-right" data-aos-duration="1000" data-aos-offset="600" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
         <img src="assets/images/Navigation-amico.png" style="width:100%; height:auto"/>
       </div>
     </div>
