--- a/src/app/repos/repos.component.css
+++ b/src/app/repos/repos.component.css
@@ -5,6 +5,13 @@ section {
   color: #2F2f2F;
 }
 
+@media (max-width: 768px) {
+	a button {
+		width: 100%;
+	}
+}
+
+
 button {
 	font-size: 28px;
 	width: 40%;
