--- a/src/app/repos/repos.component.html
+++ b/src/app/repos/repos.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h1>REPOSITORIOS</h1>
 		<div class="row">
-			<div class="col-8 col-xs-12 col-sm-12 col-md-6 col-lg-9">
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-9">
 				<p class="fs-2">
 				Praesent gravida odio vitae nisl iaculis suscipit.
 				Mauris eget mauris venenatis, congue eros eu, pharetra sem.
@@ -10,13 +10,12 @@
 				Duis pharetra ante vitae accumsan accumsan.
 				</p>
 				<a href="https://github.com/UNSLAM" target="_blank">
-					<button type="button" class="btn btn-primary mt-5">Enlace a GitHub</button>
+					<button type="button" class="btn btn-primary mt-4">Enlace a GitHub</button>
 				</a>
 			</div>
-			<div data-aos="fade-right" data-aos-duration="3000" data-aos-anchor-placement="center-bottom" data-aos-offset="300" class="col-4 col-xs-12 col-sm-12 col-md-6 col-lg-3">
+			<div data-aos="fade-right" data-aos-duration="3000" data-aos-anchor-placement="center-bottom" data-aos-offset="300" class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
 				<img src="assets/images/Memory storage-pana.png" style="width: 100%"/>
 			</div>
-		</div>
-      
+		</div>    
   </div>
 </section>
