Added missing members images

--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -3,24 +3,24 @@
     <h1>EL EQUIPO</h1>
     <div class="container text-center">
       <div data-aos="flip-down" data-aos-duration="1000" data-aos-offset="400" class="row justify-content-center">
-        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <img class="member" src="assets/images/generic-profile-picture.jpg"  />
+        <div class="col col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+          <img class="member" src="assets/images/members/abustamante.jpeg"  />
           <p class="name">Andres Bustamante</p>
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <img class="member" src="assets/images/members/mdestefano.jpg"  />
+        <div class="col col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+          <img class="member" src="assets/images/members/mdestefano.jpeg"  />
           <p class="name">Matías De Stefano</p>
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <img class="member" src="assets/images/generic-profile-picture.jpg"/>
+        <div class="col col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+          <img class="member" src="assets/images/members/apernas.jpeg"/>
           <p class="name">Agustín Pernas</p>
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <img class="member" src="assets/images/members/lsantos.jpg"  />
+        <div class="col col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+          <img class="member" src="assets/images/members/lsantos.jpeg"  />
           <p class="name">Leandro Santos</p>
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <img class="member" src="assets/images/generic-profile-picture.jpg"  /> <br/>
+        <div class="col col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+          <img class="member" src="assets/images/members/asinopoli.jpeg"  /> <br/>
           <p class="name">Alesio Sinopoli</p>
         </div>
       </div>
