--- a/src/app/members/members.component.css
+++ b/src/app/members/members.component.css
@@ -32,8 +32,8 @@ p {
 
 img.member{
     border-radius: 100%;
-    width: 80%;
-    height: auto;
+    width: 90%;
+    height: 80%;
 		-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   	filter: grayscale(100%);
 }
