Changed styles, added technologies images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
-  <app-banner></app-banner>
-  <app-intro></app-intro>
-  <app-members></app-members>
-	<app-contact></app-contact>
-	<app-repos></app-repos>
+<app-banner></app-banner>
+<app-intro></app-intro>
+<app-members></app-members>
+<app-technicals-details></app-technicals-details>
+<app-contact></app-contact>
 <app-footer></app-footer>
