--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,41 +1,91 @@
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+<section>
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div class="carousel-inner">
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+      </div>
+      <div class="carousel-item active">
+        <video
+          src="assets/videos/cleaning_robot.mp4"
+          class="d-block"
+          alt="..."
+          autoplay
+          loop
+          muted
+        >
+          Tu navegador no admite el elemento <code>video</code>.
+        </video>
+        <div class="carousel-caption d-block">
+          <h1>Ofrecemos servicios de navegación inteligentes</h1>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <video
+          src="assets/videos/keypoints.mp4"
+          class="d-block"
+          alt="..."
+          autoplay
+          loop
+          muted
+        >
+          Tu navegador no admite el elemento <code>video</code>.
+        </video>
+        <div class="carousel-caption d-block">
+          <h1>Generación de mapas, localización y navegación.</h1>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <video
+          src="assets/videos/warehouse.mp4"
+          class="d-block"
+          alt="..."
+          autoplay
+          loop
+          muted
+        >
+          Tu navegador no admite el elemento <code>video</code>.
+        </video>
+        <div class="carousel-caption d-block">
+          <h1>Aplicación en diversos dispositivos y robots.</h1>
+        </div>
+      </div>
+    </div>
+    <button
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <div class="carousel-inner">
-		<div class="carousel-item active">
-      <video src="assets/videos/cleaning_robot.mp4" class="d-block w-100" alt="..." autoplay loop muted>
-        Tu navegador no admite el elemento <code>video</code>.
-      </video>
-      <div class="carousel-caption d-block">
-        <h1>Ofrecemos servicios de navegación inteligentes</h1>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <video src="assets/videos/keypoints.mp4" class="d-block w-100" alt="..." autoplay loop muted>
-        Tu navegador no admite el elemento <code>video</code>.
-      </video>
-      <div class="carousel-caption d-block">
-        <h1>Generación de mapas, localización y navegación.</h1>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <video src="assets/videos/warehouse.mp4" class="d-block w-100" alt="..." autoplay loop muted>
-        Tu navegador no admite el elemento <code>video</code>.
-      </video>
-      <div class="carousel-caption d-block">
-        <h1>Aplicación en diversos dispositivos y robots.</h1>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+</section>
