--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,50 +1,76 @@
-<section id="nosotros">
+<section>
   <div class="container">
     <h1>NOSOTROS</h1>
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
         <p class="fs-2">
           En <b>UNSLAM</b> ofrecemos productos que utilizan la técnica de
-					posicionamiento conocida como <b>Visual SLAM</b>, utilizando cámaras
-					para captar información del ambiente. Estas técnicas, por lo general,
-					requieren un alto poder de cómputo. Nuestros productos permiten
-					ejecutar Visual SLAM utilizando un <b>celular</b> como capturador
-					de imágenes.
+          posicionamiento conocida como <b>Visual SLAM</b>, utilizando cámaras
+          para captar información del ambiente. Estas técnicas, por lo general,
+          requieren un alto poder de cómputo. Nuestros productos permiten
+          ejecutar Visual SLAM utilizando un <b>celular</b> como capturador de
+          imágenes.
         </p>
       </div>
-			<div data-aos="fade-right" data-aos-duration="1000" data-aos-offset="400" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-        <img src="assets/images/Camera-pana.png" style="width:100%; height:auto"/>
+      <div
+        data-aos="fade-right"
+        data-aos-duration="1000"
+        data-aos-offset="400"
+        class="col-xs-12 col-sm-12 col-md-4 col-lg-4"
+      >
+        <img
+          src="assets/images/Camera-pana.png"
+          style="width: 100%; height: auto"
+        />
       </div>
     </div>
     <div class="row pt-5">
-      <div data-aos="fade-left" data-aos-duration="1000" data-aos-offset="500" class="col-xs-12 col-sm-12 col-md-4 col-lg-4 order-sm-1 order-xs-1 order-md-last order-lg-0 order-xl-0">
-        <img src="assets/images/Paper map-bro.png" style="width:100%; height:auto"/>
+      <div
+        data-aos="fade-left"
+        data-aos-duration="1000"
+        data-aos-offset="500"
+        class="col-xs-12 col-sm-12 col-md-4 col-lg-4 order-sm-1 order-xs-1 order-md-last order-lg-0 order-xl-0"
+      >
+        <img
+          src="assets/images/Paper map-bro.png"
+          style="width: 100%; height: auto"
+        />
       </div>
-      <div class="order-sm-0 order-xs-0 order-lg-1 order-xl-1 order-md-1 col-xs-12 col-sm-12 col-md-8 col-lg-8 ">
+      <div
+        class="order-sm-0 order-xs-0 order-lg-1 order-xl-1 order-md-1 col-xs-12 col-sm-12 col-md-8 col-lg-8"
+      >
         <p class="fs-2">
           Nuestros productos ofrecen 3 funciones principales. La primera de
-					ellas es la <b>generación de mapas</b> de los ambientes. Mediante el
-					celular enviaremos el video al sistema para procesarlo y generar el
-					mapa del ambiente. La segunda función es la <b>localización</b>, donde
-					podremos ver la ubicación del dispositivo, dentro del mapa, gracias a
-					las imágenes que envía el celular. La función de <b>navegación</b>
-					permite seleccionar un punto del mapa generado para permitir la
-					movilidad autónoma del dispositivo mediante la filmación de su
-					entorno.
+          ellas es la <b>generación de mapas</b> de los ambientes. Mediante el
+          celular enviaremos el video al sistema para procesarlo y generar el
+          mapa del ambiente. La segunda función es la <b>localización</b>, donde
+          podremos ver la ubicación del dispositivo, dentro del mapa, gracias a
+          las imágenes que envía el celular. La función de <b>navegación</b>
+          permite seleccionar un punto del mapa generado para permitir la
+          movilidad autónoma del dispositivo mediante la filmación de su
+          entorno.
         </p>
       </div>
     </div>
     <div class="row pt-5">
       <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
         <p class="fs-2">
-					Nuestro software se aplica principalmente en <b>robots móviles
-					autónomos (AMR)</b>, aportando valor a ambientes como fábricas, depósitos
-					y hospitales, donde dichos robots podrán transportar objetos de manera
-					autónoma.
+          Nuestro software se aplica principalmente en
+          <b>robots móviles autónomos (AMR)</b>, aportando valor a ambientes
+          como fábricas, depósitos y hospitales, donde dichos robots podrán
+          transportar objetos de manera autónoma.
         </p>
       </div>
-			<div data-aos="fade-right" data-aos-duration="1000" data-aos-offset="600" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-        <img src="assets/images/Navigation-amico.png" style="width:100%; height:auto"/>
+      <div
+        data-aos="fade-right"
+        data-aos-duration="1000"
+        data-aos-offset="600"
+        class="col-xs-12 col-sm-12 col-md-4 col-lg-4"
+      >
+        <img
+          src="assets/images/Navigation-amico.png"
+          style="width: 100%; height: auto"
+        />
       </div>
     </div>
   </div>
