--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,19 +1,30 @@
-<section id="contacto">
+<section>
   <div class="container">
     <h1>CONTACTO</h1>
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-9">
         <p class="fs-2">
           A continuación te brindamos un mail para que puedas contactarte con
-					nosotros y despejar cualquier tipo de dudas.
+          nosotros y despejar cualquier tipo de dudas.
         </p>
-				<a href="mailto:matiasdestefano97@gmail.com">
-					<button type="button" class="btn btn-primary mt-4">Enviar mail</button>
-				</a>
+        <a href="mailto:matiasdestefano97@gmail.com">
+          <button type="button" class="btn btn-primary mt-4">
+            Enviar mail
+          </button>
+        </a>
       </div>
-			<div data-aos="zoom-out-left" data-aos-duration="3000" data-aos-anchor-placement="center-bottom" data-aos-offset="400" class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
-        <img src="assets/images/Mail sent-amico.png" style="width:100%; height:auto"/>
-      </div>
-  	</div>
-	</div>
+      <!-- <div
+        data-aos="zoom-out-left"
+        data-aos-duration="3000"
+        data-aos-anchor-placement="center-bottom"
+        data-aos-offset="400"
+        class="col-xs-12 col-sm-12 col-md-6 col-lg-3"
+      >
+        <img
+          src="assets/images/Mail sent-amico.png"
+          style="width: 100%; height: auto"
+        />
+      </div> -->
+    </div>
+  </div>
 </section>
