--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,35 +1,30 @@
-<section id="equipo">
+<section>
   <div class="container">
     <h1>EL EQUIPO</h1>
     <div class="container text-center">
-      <div data-aos="flip-down" data-aos-duration="1000" data-aos-offset="400" class="row justify-content-center">
-        <div class="col col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <img class="member" src="assets/images/members/abustamante.jpeg"  />
+      <div class="row justify-content-center">
+        <div class="column col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+          <img class="member" src="assets/images/members/abustamante.jpeg" />
           <p class="name">Andres Bustamante</p>
         </div>
-        <div class="col col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <img class="member" src="assets/images/members/mdestefano.jpeg"  />
+        <div class="column col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+          <img class="member" src="assets/images/members/mdestefano.jpeg" />
           <p class="name">Matías De Stefano</p>
         </div>
-        <div class="col col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <img class="member" src="assets/images/members/apernas.jpeg"/>
+        <div class="column col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+          <img class="member" src="assets/images/members/apernas.jpeg" />
           <p class="name">Agustín Pernas</p>
         </div>
-        <div class="col col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <img class="member" src="assets/images/members/lsantos.jpeg"  />
+        <div class="column col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+          <img class="member" src="assets/images/members/lsantos.jpeg" />
           <p class="name">Leandro Santos</p>
         </div>
-        <div class="col col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
-          <img class="member" src="assets/images/members/asinopoli.jpeg"  /> <br/>
+        <div class="column col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
+          <img class="member" src="assets/images/members/asinopoli.jpeg" />
+          <br />
           <p class="name">Alesio Sinopoli</p>
         </div>
       </div>
     </div>
-		<div data-aos="zoom-in-up" data-aos-duration="1500" data-aos-offset="400" class="row text-center justify-content-center">
-			<img src="assets/images/Business risk-pana.png" class="business"/>
-		</div>
   </div>
-	
 </section>
-
-
