--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,16 +1,37 @@
-<div class="container">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <p class="col-md-4 mb-0 text-muted">2022 UNLAM</p>
-
-    <a href="" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-      <img src="assets/images/LogoWeb.png" width="auto" height="70" class="d-inline-block align-top" alt="">
-    </a>
-
-    <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="#nosotros" class="nav-link px-2 text-muted">NOSOTROS</a></li>
-      <li class="nav-item"><a href="#equipo" class="nav-link px-2 text-muted">EL EQUIPO</a></li>
-      <li class="nav-item"><a href="#contacto" class="nav-link px-2 text-muted">CONTACTO</a></li>
-      <li class="nav-item"><a href="#repositorios" class="nav-link px-2 text-muted">REPOSITORIOS</a></li>
-    </ul>
-  </footer>
-</div>
+<section>
+  <div class="container">
+    <footer
+      class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
+    >
+      <p class="col-md-4 mb-0 text-muted">2022 UNLAM</p>
+      <a
+        href=""
+        class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
+      >
+        <img
+          src="assets/images/LogoWeb.png"
+          width="auto"
+          height="70"
+          class="d-inline-block align-top"
+          alt=""
+        />
+      </a>
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item">
+          <a href="#nosotros" class="nav-link px-2 text-muted">NOSOTROS</a>
+        </li>
+        <li class="nav-item">
+          <a href="#equipo" class="nav-link px-2 text-muted">EL EQUIPO</a>
+        </li>
+        <li class="nav-item">
+          <a href="#contacto" class="nav-link px-2 text-muted">CONTACTO</a>
+        </li>
+        <li class="nav-item">
+          <a href="#repositorios" class="nav-link px-2 text-muted"
+            >REPOSITORIOS</a
+          >
+        </li>
+      </ul>
+    </footer>
+  </div>
+</section>
