--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,18 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="#">
-      <img src="assets/images/LogoWeb.png" width="auto" height="70" class="d-inline-block align-top" alt="">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#nosotros">NOSOTROS</a>
-        <a class="nav-link" href="#equipo">EL EQUIPO</a>
-        <a class="nav-link" href="#contacto">CONTACTO</a>
-        <a class="nav-link" href="#repositorios">REPOSITORIOS</a>
+<section>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img
+          src="assets/images/LogoWeb.png"
+          width="auto"
+          height="70"
+          class="d-inline-block align-top"
+          alt=""
+        />
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" href="#nosotros">NOSOTROS</a>
+          <a class="nav-link" href="#equipo">EL EQUIPO</a>
+          <a class="nav-link" href="#contacto">CONTACTO</a>
+          <a class="nav-link" href="#repositorios">REPOSITORIOS</a>
+        </div>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
+</section>
