Change the style of Technology section

--- a/src/app/technicals-details/technologies/technologies.component.css
+++ b/src/app/technicals-details/technologies/technologies.component.css
@@ -1,4 +1,9 @@
 .technology {
-    width: auto;
-    height: 256px;
+    max-width: 128px;
+    max-height: 128px;
+}
+
+section {
+  color: white;
+  background-color: var(--primary-color-night-rider);
 }
