--- a/src/app/technicals-details/repos/repos.component.css
+++ b/src/app/technicals-details/repos/repos.component.css
@@ -8,19 +8,22 @@
 section {
   font-family: Sarabun;
   padding: 30px 0px;
-  color: var(--primary-color-night-rider);
+  color: white;
+  background-color: var(--primary-color-night-rider);
 }
 
 button {
   font-size: 28px;
   width: 40%;
-  --bs-btn-bg: #2f2f2f;
-  --bs-btn-border-color: #2f2f2f;
+  color: var(--primary-color-night-rider);
+  --bs-btn-bg: white;
+  --bs-btn-border-color: white;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #444343;
+  --bs-btn-hover-bg: whitesmoke;
   --bs-btn-hover-border-color: #ff4c4c;
   --bs-btn-focus-shadow-rgb: 49, 132, 253;
-  --bs-btn-active-color: #fff;
+  --bs-btn-hover-color: var(--primary-color-night-raider);
+  --bs-btn-active-color: var(--primary-color-night-rider);
   --bs-btn-active-bg: #0a58ca;
   --bs-btn-active-border-color: #0a53be;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
