--- a/src/app/technicals-details/technicals-details.component.css
+++ b/src/app/technicals-details/technicals-details.component.css
@@ -1,5 +1,6 @@
 section {
   font-family: Sarabun;
   padding: 30px 0px;
-  color: var(--primary-color-night-rider);
+  color: white;
+  background-color: var(--primary-color-night-rider);
 }
