--- a/src/app/technicals-details/technologies/technologies.component.html
+++ b/src/app/technicals-details/technologies/technologies.component.html
@@ -1,22 +1,31 @@
 <section>
     <div class="container">
-      <h1>TECNOLOGÍAS</h1>
-      <div class="row">
-        <div class="col-4">
-            <img class="technology" src="assets/images/technologies/cpp.png" />
+      <h1 class="mb-4">TECNOLOGÍAS</h1>
+      <div class="row text-center">
+        <div class="col">
+          <img class="technology" src="assets/images/technologies/cpp.png" />
         </div>
-        <div class="col-4">
-            <img class="technology" src="assets/images/technologies/css.png" />
+        <div class="col">
+          <img class="technology" src="assets/images/technologies/css.png" />
         </div>
-        <div class="col-4">
-            <img class="technology" src="assets/images/technologies/ems.png" />
+        <div class="col">
+          <img class="technology" src="assets/images/technologies/ems.png" />
+        </div>
+        <div class="col">
+          <img class="technology" src="assets/images/technologies/html.png" />
+        </div>
+        <div class="col">
+          <img class="technology" src="assets/images/technologies/js.png" />
+        </div>
+        <div class="col">
+          <img class="technology" src="assets/images/technologies/ocv.png" />
+        </div>
+        <div class="col">
+          <img class="technology" src="assets/images/technologies/python.png" />
+        </div>
+        <div class="col">
+          <img class="technology" src="assets/images/technologies/wa.png" />
         </div>
       </div>
-      
-      <img class="technology" src="assets/images/technologies/html.png" />
-      <img class="technology" src="assets/images/technologies/js.png" />
-      <img class="technology" src="assets/images/technologies/ocv.png" />
-      <img class="technology" src="assets/images/technologies/python.png" />
-      <img class="technology" src="assets/images/technologies/wa.png" />
     </div>
   </section>
