Added ids to sections

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="contacto">
   <div class="container">
     <h1>CONTACTO</h1>
     <div class="row">
@@ -7,7 +7,7 @@
           A continuación te brindamos un mail para que puedas contactarte con
           nosotros y despejar cualquier tipo de dudas.
         </p>
-        <a href="mailto:matiasdestefano97@gmail.com">
+        <a href="mailto:info.unslam@gmail.com">
           <button type="button" class="btn btn-primary mt-4">
             Enviar mail
           </button>
