--- a/src/app/technicals-details/repos/repos.component.html
+++ b/src/app/technicals-details/repos/repos.component.html
@@ -1,13 +1,10 @@
 <section>
   <div class="container">
-    <h1>REPOSITORIOS</h1>
+    <h1>REPOSITORIO</h1>
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-9">
         <p class="fs-2">
-          Praesent gravida odio vitae nisl iaculis suscipit. Mauris eget mauris
-          venenatis, congue eros eu, pharetra sem. Aliquam id nisi augue.
-          Aliquam urna velit, sodales et mollis eget, mollis sed dolor. Duis
-          pharetra ante vitae accumsan accumsan.
+          El código que desarrollamos se encuentra alojado en GitHub y se encuentra disponible para todo el público.
         </p>
         <a href="https://github.com/UNSLAM" target="_blank">
           <button type="button" class="btn btn-primary mt-4">
