--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,6 +1,6 @@
-<section>
+<section id="nuestro-producto">
   <div class="container">
-    <h1>NOSOTROS</h1>
+    <h1>NUESTRO PRODUCTO</h1>
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
         <p class="fs-2">
