--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,6 +1,6 @@
-<section>
+<section id="nosotros">
   <div class="container">
-    <h1>EL EQUIPO</h1>
+    <h1>NOSOTROS</h1>
     <div class="container text-center">
       <div class="row justify-content-center">
         <div class="column col-xs-6 col-sm-6 col-md-4 col-lg-2 col-xl-2">
