--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -23,10 +23,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
+          <a class="nav-link" href="#nuestro-producto">NUESTRO PRODUCTO</a>
           <a class="nav-link" href="#nosotros">NOSOTROS</a>
-          <a class="nav-link" href="#equipo">EL EQUIPO</a>
+          <a class="nav-link" href="#detalles-tecnicos">DETALLES TÉCNICOS</a>
           <a class="nav-link" href="#contacto">CONTACTO</a>
-          <a class="nav-link" href="#repositorios">REPOSITORIOS</a>
         </div>
       </div>
     </div>
