Add commercial video

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <app-banner></app-banner>
 <app-intro></app-intro>
+<app-commercial-video></app-commercial-video>
 <app-members></app-members>
 <app-technicals-details></app-technicals-details>
 <app-contact></app-contact>
